# codecode

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  package.json  pyproject.toml
.codex/: problem-state.json
.github/workflows/: ci.yml  release.yml
assets/i18n/: en.json  es.json  ja.json  ko.json  zh.json
assets/lessons/: README.md  course-schema.json  en.json  es.json  ja.json  ko.json  python.en.json  python.ko.json  schema.json  zh.json
assets/lessons/java/: course.json  en.json  es.json  ja.json  ko.json  zh.json
assets/lessons/python/: course.json  en.json  es.json  ja.json  ko.json  zh.json
assets/lessons/rust/: course.json  en.json  es.json  ja.json  ko.json  zh.json
assets/lessons/typescript/: course.json  en.json  es.json  (+3 more)
docs/: ARCHITECTURE.md  COMMANDS.md  CONTRIBUTING.md  MAINTAINING.md  problem-authoring-notes.md
scripts/: npm-postinstall.js  release.sh
src/: ai.rs  core.rs  i18n.rs  lib.rs  main.rs  process.rs  text.rs  tui.rs  update.rs
src/codecode/: app.py  core.py  problem_bank.json
src/core/: bank.rs  judge.rs  language.rs  learning.rs  model.rs  problem_files.rs  profile.rs  render.rs  state.rs  syntax.rs
src/tui/: actions.rs  command_handlers.rs  command_input.rs  commands.rs  doctor.rs  editor.rs  events.rs  learning.rs  problem_list.rs  problem_view.rs  settings_panel.rs  status.rs  tasks.rs  view.rs
tests/: ai.rs  cli.rs  core.rs  i18n.rs  launcher.test.js  test_app.py  test_core.py  text.rs  tui.rs  update.rs
tests/common/: mod.rs
(+3 files in other folders)
