[project]
name = "codecode"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "textual>=8.2.8",
]

[project.scripts]
codecode = "codecode.app:main"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["uv_build>=0.11.16,<0.12"]
build-backend = "uv_build"
